--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -5,4 +5,29 @@ hide:
 
 # MT01
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+En el módulo MT01, se ha encomendado la tarea de comprender y dominar el proceso de creación de un repositorio en GitHub. GitHub, una plataforma de desarrollo colaborativo basada en la nube, se ha convertido en una herramienta indispensable para el el control de versiones y la gestión de proyectos en el ámbito de la programación y más allá.
+
+### Crear un fork del template de EFDI:
+
+En el repositorio del template se hace un fork del siguiente enlace https://github.com/fablabbcn/efdi-template. 
+
+![image](image_mt1.png)
+
+### Utilización github.dev para realizar modificaciones:
+
+El editor basado en web de github.dev se puede utilizar para editar archivos y confirmar los cambios de github.
+
+![image](image_mt2.png)
+
+### GitHub Pages 
+
+Hacemos uso del servicio de alojamiento de sitio estático directamente desde un repositorio en GitHub. Luego de hacer el primer push, configuramos desde github desde Settings
+
+![image](image_mt3.png)
+
+### Modificaciones en las diferentes vistas
+
+Se modificaron las diferentes vistas en las páginas para personalizarlas y agregar mis datos. Además agregar el paso a paso para hacer la actividad mt01.
+
+![image](image_mt4.png)
