--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -12,22 +12,22 @@ En el módulo MT01, se ha encomendado la tarea de comprender y dominar el proces
 
 En el repositorio del template se hace un fork del siguiente enlace https://github.com/fablabbcn/efdi-template. 
 
-![image](image_mt1.png)
+![image](../images/image_mt1.png)
 
 ### Utilización github.dev para realizar modificaciones:
 
 El editor basado en web de github.dev se puede utilizar para editar archivos y confirmar los cambios de github.
 
-![image](image_mt2.png)
+![image](../images/image_mt2.png)
 
 ### GitHub Pages 
 
 Hacemos uso del servicio de alojamiento de sitio estático directamente desde un repositorio en GitHub. Luego de hacer el primer push, configuramos desde github desde Settings
 
-![image](image_mt3.png)
+![image](../images/image_mt3.png)
 
 ### Modificaciones en las diferentes vistas
 
 Se modificaron las diferentes vistas en las páginas para personalizarlas y agregar mis datos. Además agregar el paso a paso para hacer la actividad mt01.
 
-![image](image_mt4.png)
+![image](../images/image_mt4.png)
