--- a/docs/diseno/md01.md
+++ b/docs/diseno/md01.md
@@ -20,7 +20,9 @@ http://www.fuel4design.org/index.php/atlas-of-weak-signals/
 
 Se utilizará la herramienta Miro para trabajar con el Atlas of Weak Signals. Miro proporciona una plataforma colaborativa que permite a los miembros del grupo recopilar, organizar y analizar de manera conjunta. Con Miro se pueden crear tableros virtuales donde pueden agregar y categorizar las señales, facilitando la colaboración en tiempo real y la visualización de patrones emergentes. Esta herramienta también permite la integración de notas y comentarios para enriquecer el proceso de análisis y diseño.
 
-![](../images/MD01/miro.jpg)
+![](../images/MD01/miro.png)
+
+URL: https://miro.com/es/
 
 ### Primer Paso. Seleccionar Señales Débiles
 
@@ -57,5 +59,8 @@ Ahora vamos un paso más allá e intentemos describir los presentes alternativos
 
 El resultado final del diseño de la idea pensada es un proyecto integral de implementación de sistemas descentralizados de energía y tecnologías de gestión inteligente en entornos urbanos, con el objetivo de reducir la dependencia de la red eléctrica centralizada y promover el uso de fuentes de energía renovables.
 Para acceder al Miro con las cartas de Atlas utilizadas en el diseño de esta idea,
+
+![](../images/MD01/Atlas6.png)
+
 
 https://miro.com/app/board/uXjVKQ8Rt_E=/
