--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -5,6 +5,58 @@ hide:
 
 # MT02
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+La actividad MTO2 consistirá en el diseño de un objeto utilitario compuesto por al menos dos piezas y que incluya un logo en relieve. Los participantes crearán una lámina de presentación simple que contenga un título, una imagen del producto y una breve descripción del mismo. El objetivo es fomentar la creatividad en el diseño de objetos funcionales y estéticamente atractivos.
 
-![](../images/MT01/scorpio_blow.jpg)
+### INKSCAPE
+
+Inkscape es un editor de gráficos vectoriales libre y de código abierto. Inkscape puede crear y editar diagramas, líneas, gráficos, logotipos, e ilustraciones complejas. El formato principal que utiliza el programa es Scalable Vector Graphics
+
+La URL para acceder: https://inkscape.org/es/
+
+![](../images/MT02/image_MT02_1.png)
+
+Este software sera utilizado para crear el logo con vectores.
+
+### Primer paso para crear el logo
+
+Se busco una imágen para poder calcarlo dentro de inkscape. Y hacerle algunas modificaciones.
+
+![](../images/MT02/logo1.jpg
+
+### Segundo paso para crear el logo
+
+La imagen seleccionada se colocó en una capa con opacidad reducida para facilitar el trazado. Se empezó con el contorno de la imágen en otra capa utilizando la herramienta Bezier. Para darle más profundidad visual, se aplicó un degradado lineal como relleno.
+
+![](../images/MT02/image_MT02_2.png)
+
+### Tercer paso para creat el logp
+
+Finalmente, el logo se exportó al formato .dxf para su posterior integración en Fusion 360.
+
+![](../images/MT02/image_MT02_3.png)
+
+### Modelado 3D usando Autodesk Fusion 
+
+Autodesk Fusion es una plataforma de software CAD, CAM, CAE y de circuitos impresos de modelado 3D basada en la nube para el diseño y la manufactura de productos.
+
+![](../images/MT02/image_MT02_4.png)
+
+### Primer Paso para el modelado 3D
+
+Se seleccionó un objeto utilitario como referencia y se tomaron meticulosamente todas las medidas necesarias.
+
+### Segundo Paso para el modelado 3D
+
+Se procedió a modelar la estructura del escritorio, otorgándole un realismo visual con texturas de madera.
+
+![](../images/MT02/image_MT02_6.png)
+
+### Tercer Paso para el modelado 3D
+
+Se modeló los cajones y los rieles donde irán los mismo. Luego se pasó a ensamblar todas las piezas y por último se agregó el archivo .dxf del logo. Y se removió el material para dejar el logo.
+
+![](../images/MT02/image_MT02_7.png)
+
+Renderizado
+
+![](../images/MT02/image_MT02_8.png)
