--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -21,7 +21,7 @@ Este software sera utilizado para crear el logo con vectores.
 
 Se busco una imágen para poder calcarlo dentro de inkscape. Y hacerle algunas modificaciones.
 
-![](../images/MT02/logo1.jpg
+![](../images/MT02/logo1.jpg)
 
 ### Segundo paso para crear el logo
 
@@ -45,18 +45,23 @@ Autodesk Fusion es una plataforma de software CAD, CAM, CAE y de circuitos impre
 
 Se seleccionó un objeto utilitario como referencia y se tomaron meticulosamente todas las medidas necesarias.
 
+![](../images/MT02/image_MT02_5.png)
+
 ### Segundo Paso para el modelado 3D
 
 Se procedió a modelar la estructura del escritorio, otorgándole un realismo visual con texturas de madera.
 
 ![](../images/MT02/image_MT02_6.png)
+![](../images/MT02/image_MT02_7.png)
+![](../images/MT02/image_MT02_8.png)
 
 ### Tercer Paso para el modelado 3D
 
 Se modeló los cajones y los rieles donde irán los mismo. Luego se pasó a ensamblar todas las piezas y por último se agregó el archivo .dxf del logo. Y se removió el material para dejar el logo.
 
-![](../images/MT02/image_MT02_7.png)
+![](../images/MT02/image_MT02_9.png)
+![](../images/MT02/image_MT02_10.png)
 
 Renderizado
 
-![](../images/MT02/image_MT02_8.png)
+![](../images/MT02/image_MT02_11.png)
