--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -57,7 +57,7 @@ Se procedió a modelar la estructura del escritorio, otorgándole un realismo vi
 
 ### Tercer Paso para el modelado 3D
 
-Se modeló los cajones y los rieles donde irán los mismo. Luego se pasó a ensamblar todas las piezas y por último se agregó el archivo .dxf del logo. Y se removió el material para dejar el logo.
+Se modeló los cajones y los rieles donde irán los mismo. Luego se pasó a ensamblar todas las piezas con movimiento corredera teniendo en cuenta el desplazamiento máximo y mínimo. Por último se agregó el archivo .dxf del logo. Y se removió el material para dejar el logo.
 
 ![](../images/MT02/image_MT02_9.png)
 ![](../images/MT02/image_MT02_10.png)
@@ -65,3 +65,9 @@ Se modeló los cajones y los rieles donde irán los mismo. Luego se pasó a ensa
 Renderizado
 
 ![](../images/MT02/image_MT02_11.png)
+
+STL descargables:
+
+[Escritorio](https://drive.google.com/file/d/1OAFgz5Jq5UuRs-o-iucL_4bZXJSXczTc/view?usp=sharing)
+[Riel](https://drive.google.com/file/d/1v-0yRHzpsqPDpO5zWuIDzm9sWxcLNonb/view?usp=sharing)
+[Cajon](https://drive.google.com/file/d/1u6jlrt5HBYyK4zFrBTnVCAli7wSfT3QO/view?usp=sharing)
