--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -69,5 +69,11 @@ Renderizado
 STL descargables:
 
 [Escritorio](https://drive.google.com/file/d/1OAFgz5Jq5UuRs-o-iucL_4bZXJSXczTc/view?usp=sharing)
+
 [Riel](https://drive.google.com/file/d/1v-0yRHzpsqPDpO5zWuIDzm9sWxcLNonb/view?usp=sharing)
+
 [Cajon](https://drive.google.com/file/d/1u6jlrt5HBYyK4zFrBTnVCAli7wSfT3QO/view?usp=sharing)
+
+SVG Descargable:
+
+[Logo](https://drive.google.com/file/d/1RLfONKZYy3gfTo7AExZfMajiqSh2bcb4/view?usp=sharing)
