--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -77,3 +77,9 @@ STL descargables:
 SVG Descargable:
 
 [Logo](https://drive.google.com/file/d/1RLfONKZYy3gfTo7AExZfMajiqSh2bcb4/view?usp=sharing)
+
+### Presentación escritorio
+
+![](../images/MT02/Escritorio.png)
+
+[PDF presentación](https://drive.google.com/file/d/1tjjAcNHcweR4EdEh4VDAtWbCkC6JOJMa/view?usp=sharing)
