--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -29,7 +29,7 @@ La imagen seleccionada se colocó en una capa con opacidad reducida para facilit
 
 ![](../images/MT02/image_MT02_2.png)
 
-### Tercer paso para creat el logp
+### Tercer paso para crear el logo
 
 Finalmente, el logo se exportó al formato .dxf para su posterior integración en Fusion 360.
 
@@ -40,6 +40,8 @@ Finalmente, el logo se exportó al formato .dxf para su posterior integración e
 Autodesk Fusion es una plataforma de software CAD, CAM, CAE y de circuitos impresos de modelado 3D basada en la nube para el diseño y la manufactura de productos.
 
 ![](../images/MT02/image_MT02_4.png)
+
+La URL para acceder: https://latinoamerica.autodesk.com/products/fusion-360/
 
 ### Primer Paso para el modelado 3D
 
