--- a/docs/innovacion/mi01.md
+++ b/docs/innovacion/mi01.md
@@ -5,4 +5,38 @@ hide:
 
 # MI01
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+El módulo MI01, titulado "Diseño Distribuido e Innovación Abierta", está diseñado para explorar y aplicar conceptos avanzados de creación colaborativa y sostenible en el diseño. Este módulo se centra en fomentar una mentalidad abierta, promoviendo prácticas colaborativas y principios de diseño regenerativo dentro de un marco de visión ecosistémica. Teniendo en cuenta los siguientez enfoques; mentalidad abierta, prácticas Colaborativas y principios de diseño regenerativo.
+
+
+### Herramiento MIRO 
+
+Para facilitar la colaboración y el intercambio de ideas, se utilizará la herramienta Miro, una plataforma digital que permite la co-creación en tiempo real. Miro facilitará:
+
+![](../images/MD01/miro.png)
+
+URL: https://miro.com/es/
+
+### Idea para el proyecto final
+
+Se tuvo en cuenta 4 preguntas para lograr expandirse en la idea del proyecto. 
+¿Qué problema(s) quieres contribuir a resolver?
+¿En qué contexto/industria nace tu proyecto?
+¿Para quién creas valor con tu proyecto? 
+¿Quién se queda fuera?
+¿Cómo generas valor a tu próyecto?
+
+El proyecto se centra en abordar la descentralización de la energía eléctrica mediante aerogeneradores domésticos. Este enfoque busca proporcionar soluciones innovadoras para la generación de energía local, ayudando a mitigar los problemas de inestabilidad en el suministro eléctrico.
+
+![](../images/MI01/image_mi01.png)
+
+URL: https://miro.com/app/board/uXjVKMo0rPU=/
+
+### Actividad en Grupo y Reflexión sobre proyectos
+
+En esta actividad, se realizaron una reflexión colaborativa sobre varios proyectos. El análisis se centró en evaluar cómo estos proyectos aplica los principios de la innovación abierta, diseño colaborativo y diseño regenerativo.
+
+![](../images/MI01/image_mi02.png)
+
+### Conclusín
+
+Las actividades del módulo MI01 han demostrado que la combinación de innovación abierta, diseño colaborativo y principios regenerativos puede producir soluciones robustas y sostenibles para problemas complejos. La participación activa de la comunidad y el uso de herramientas digitales son elementos esenciales para el éxito de estos proyectos. En conjunto, estas prácticas promueven un entorno de aprendizaje continuo y adaptativo, necesario para enfrentar los desafíos contemporáneos de manera efectiva y sostenible.
