--- a/docs/innovacion/mi01.md
+++ b/docs/innovacion/mi01.md
@@ -10,7 +10,7 @@ El módulo MI01, titulado "Diseño Distribuido e Innovación Abierta", está dis
 
 ### Herramiento MIRO 
 
-Para facilitar la colaboración y el intercambio de ideas, se utilizará la herramienta Miro, una plataforma digital que permite la co-creación en tiempo real. Miro facilitará:
+Para facilitar la colaboración y el intercambio de ideas, se utilizará la herramienta Miro, una plataforma digital que permite la co-creación en tiempo real.
 
 ![](../images/MD01/miro.png)
 
