--- a/docs/diseno/md02.md
+++ b/docs/diseno/md02.md
@@ -31,7 +31,7 @@ Una vez definido el problema y la propuesta de valor en el primer paso, el sigui
 
 Después de definir el problema, establecer la propuesta de valor y desarrollar una estrategia de validación en los pasos anteriores, el tercer paso es establecer criterios claros para seleccionar las intervenciones específicas que se implementarán.
 
-![](../images/MD02/image_md02_3.png
+![](../images/MD02/image_md02_3.png)
 
 ### Reflexión 
 
