--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -58,5 +58,5 @@ Exportar el archivo .gcode con el formato Leonardo_Eguia.gcode.
 
 A Continuación se deja el archivo .gcode
 
-[Codigo Arduino]https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
+[Codigo .gcode]https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
 
