--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -21,6 +21,8 @@ enlace de descargas. https://www.raise3d.com/download/
 
 Localizar y descargar el archivo ModeloMT05_EFDI.f3d desde la ubicación proporcionada en la plataforma EDU. Abrir y exportar en Fusion 360. Exportar el modelo como archivo .STL (binario).
 
+[Archivo .f3d]https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
+
 ![](../images/MT05/image1.png)
 
 
@@ -31,14 +33,19 @@ Importar el archivo .STL generado previamente en el software IDEAMAKER. Luego se
 [](../images/MT05/image2.png)
 
 Posicionar la pieza:
+
 Usar los comandos de MOVER y ROTAR para colocar la pieza en la posición más conveniente para la impresión FDM. Se la colocó la pieza acostada porque si se toma en cuenta que la fuerza aplicada es en el extremo, esta posición favorece en la posición de las capas de impresión.
 Escalar la pieza:
+
 Se escalo el modelo al 150% de su tamaño original, manteniendo las proporciones.
 Generar soportes y base de construcción:
+
 Añadir soportes de tipo triángulo y seleccionar una base de construcción del tipo BALSA.
 Configurar parámetros de impresión:
+
 Seleccionar una altura de capa de 0.2mm y 2 perímetros de pared para el modelo.
 Configurar Densisdad de impresión:
+
 Como es una pieza que se le va a realizar esfuerzos de palanca, se optó por un porcentaje de 50%. 
 Elegir el extrusor (pico) IZQUIERDO para realizar el código. 
 
