--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -35,6 +35,7 @@ Importar el archivo .STL generado previamente en el software IDEAMAKER. Luego se
 Posicionar la pieza:
 
 Usar los comandos de MOVER y ROTAR para colocar la pieza en la posición más conveniente para la impresión FDM. Se la colocó la pieza acostada porque si se toma en cuenta que la fuerza aplicada es en el extremo, esta posición favorece en la posición de las capas de impresión.
+
 Escalar la pieza:
 
 Se escalo el modelo al 150% de su tamaño original, manteniendo las proporciones.
@@ -50,6 +51,8 @@ Como es una pieza que se le va a realizar esfuerzos de palanca, se optó por un 
 Elegir el extrusor (pico) IZQUIERDO para realizar el código. 
 
 A continación se prentaran en las figuras las configuraciones más importantes.
+
+[](../images/MT05/image2.png)
 
 [](../images/MT05/image3.png)
 
