--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -14,7 +14,7 @@ IdeaMaker es una cortadora de modelos 3D para diseñar fácilmente archivos de i
 La URL para acceder: https://www.raise3d.com/ideamaker/
 enlace de descargas. https://www.raise3d.com/download/
 
-![](../images/MT05/image.png)
+![](../images/MT05/image_.png)
 
 
 ### Descargar el archivo .f3d
@@ -23,14 +23,14 @@ Localizar y descargar el archivo ModeloMT05_EFDI.f3d desde la ubicación proporc
 
 [Archivo .f3d]https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
 
-![](../images/MT05/image1.png)
+![](../images/MT05/image_1.png)
 
 
 ### Importar en IDEAMAKER:
 
 Importar el archivo .STL generado previamente en el software IDEAMAKER. Luego se siguió los siguientes pasos para tener en cuenta la impresión:
 
-[](../images/MT05/image2.png)
+[](../images/MT05/image_2.png)
 
 Posicionar la pieza:
 
@@ -52,11 +52,9 @@ Elegir el extrusor (pico) IZQUIERDO para realizar el código.
 
 A continación se prentaran en las figuras las configuraciones más importantes.
 
-[](../images/MT05/image2.png)
+[](../images/MT05/image_3.png)
 
-[](../images/MT05/image3.png)
-
-[](../images/MT05/image4.png)
+[](../images/MT05/image_4.png)
 
 
 ### Generar el código G:
@@ -65,7 +63,7 @@ Realizar el corte del modelo.
 Previsualizar y analizar la construcción del modelo en todas sus capas visualmente.
 Exportar el archivo .gcode con el formato Leonardo_Eguia.gcode.
 
-[](../images/MT05/image5.png)
+[](../images/MT05/image_5.png)
 
 A Continuación se deja el archivo .gcode
 
