--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -21,7 +21,7 @@ enlace de descargas. https://www.raise3d.com/download/
 
 Localizar y descargar el archivo ModeloMT05_EFDI.f3d desde la ubicación proporcionada en la plataforma EDU. Abrir y exportar en Fusion 360. Exportar el modelo como archivo .STL (binario).
 
-[Archivo .f3d]https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
+![Archivo .f3d]https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
 
 ![](../images/MT05/image_1.png)
 
@@ -30,7 +30,7 @@ Localizar y descargar el archivo ModeloMT05_EFDI.f3d desde la ubicación proporc
 
 Importar el archivo .STL generado previamente en el software IDEAMAKER. Luego se siguió los siguientes pasos para tener en cuenta la impresión:
 
-[](../images/MT05/image_2.png)
+![](../images/MT05/image_2.png)
 
 Posicionar la pieza:
 
@@ -52,9 +52,9 @@ Elegir el extrusor (pico) IZQUIERDO para realizar el código.
 
 A continación se prentaran en las figuras las configuraciones más importantes.
 
-[](../images/MT05/image_3.png)
+![](../images/MT05/image_3.png)
 
-[](../images/MT05/image_4.png)
+![](../images/MT05/image_4.png)
 
 
 ### Generar el código G:
@@ -63,9 +63,9 @@ Realizar el corte del modelo.
 Previsualizar y analizar la construcción del modelo en todas sus capas visualmente.
 Exportar el archivo .gcode con el formato Leonardo_Eguia.gcode.
 
-[](../images/MT05/image_5.png)
+![](../images/MT05/image_5.png)
 
 A Continuación se deja el archivo .gcode
 
-[Codigo .gcode]https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
+![Codigo .gcode]https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
 
