--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -21,7 +21,7 @@ enlace de descargas. https://www.raise3d.com/download/
 
 Localizar y descargar el archivo ModeloMT05_EFDI.f3d desde la ubicación proporcionada en la plataforma EDU. Abrir y exportar en Fusion 360. Exportar el modelo como archivo .STL (binario).
 
-![Archivo .f3d](https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
+[Archivo .f3d](https://drive.google.com/file/d/1LtPr0RQdWEIW7CtqzE95KyDzig9P1hRA/view?usp=sharing)
 
 ![](../images/MT05/image_1.png)
 
@@ -67,5 +67,5 @@ Exportar el archivo .gcode con el formato Leonardo_Eguia.gcode.
 
 A Continuación se deja el archivo .gcode
 
-[Codigo .gcode]https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
+[Codigo .gcode](https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
 
