--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -12,22 +12,29 @@ En el módulo MT01, se ha encomendado la tarea de comprender y dominar el proces
 
 En el repositorio del template se hace un fork del siguiente enlace https://github.com/fablabbcn/efdi-template. 
 
-![image](../images/MT01/image_mt1.png)
+![image](../images/MT01/image_01.png)
 
 ### Utilización github.dev para realizar modificaciones:
 
-El editor basado en web de github.dev se puede utilizar para editar archivos y confirmar los cambios de github.
+El editor basado en web de github.dev se puede utilizar para editar archivos y confirmar los cambios de github. Además proporciona muchas de las ventajas de Visual Studio Code, como las búsquedas, el resaltado de la sintaxis y la vista del control de código fuente. También puedes utilizar la sincronización de la configuración para compartir tus propios valores de configuración de VS Code con el editor. La forma más fácil de acceder a él es desde el propio repositorio de GIthub, apretar la tecla ".". Viendo el siguiente tutorial se puede ver como utilizarlo, muy semejante a Visual Studio Code. 
+![Tutorial github.dev](https://www.youtube.com/watch?v=d7jHUh1PGwU)
 
-![image](../images/MT01/image_mt2.png)
+![image](../images/MT01/image_02.png)
 
 ### GitHub Pages 
 
 Hacemos uso del servicio de alojamiento de sitio estático directamente desde un repositorio en GitHub. Luego de hacer el primer push, configuramos desde github desde Settings
 
-![image](../images/MT01/image_mt3.png)
+![image](../images/MT01/image_03.png)
 
 ### Modificaciones en las diferentes vistas
 
 Se modificaron las diferentes vistas en las páginas para personalizarlas y agregar mis datos. Además agregar el paso a paso para hacer la actividad mt01.
 
-![image](../images/MT01/image_mt4.png)
+![image](../images/MT01/image_04.png)
+
+### Realizar Commit en Github.dev
+
+Luego de realizar las modificaciones en Github.dev, se debe ir a la pestaña Control de Código Fuente, ver las diferentes modificaciones que se hicieron en los diferentes archivos. Al final se debe agregar un comentario, se debe confirmar y realizar el commit. En la siguiente imagen se puede ver en donde se encuentran los diferentes botones para poder realizar estos pasos. 
+
+![image](../images/MT01/image_05.png)
