--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -38,3 +38,19 @@ Se modificaron las diferentes vistas en las páginas para personalizarlas y agre
 Luego de realizar las modificaciones en Github.dev, se debe ir a la pestaña Control de Código Fuente, ver las diferentes modificaciones que se hicieron en los diferentes archivos. Al final se debe agregar un comentario, se debe confirmar y realizar el commit. En la siguiente imagen se puede ver en donde se encuentran los diferentes botones para poder realizar estos pasos. 
 
 ![image](../images/MT01/image_05.png)
+
+### Paso a Paso realizado con GIT
+
+Abre la terminal o línea de comandos.
+Navega hasta la carpeta donde deseas clonar el repositorio utilizando el comando "cd".
+Se inicializa el repositorio con el comando "git init"
+Luego se clona el repositorio con el comando "git clone"
+
+![image](../images/MT01/image_06.png)
+
+Esto creará una copia local del repositorio en tu carpeta actual.
+Una vez clonado, entra en el directorio del repositorio. Abre el archivo que deseas modificar (mt01.md) en tu editor de texto o IDE preferido y realiza las modificaciones necesarias.
+Antes de hacer un commit, puedes verificar los cambios realizados utilizando "git status". 
+Añade el archivo modificado al área de preparación para el commit "git add mt01.md"
+Realizar commit con un mensaje descriptivo sobre los cambios realizados "git commit -m "Cambios realizados en mt01.md"
+          
