Cambios realizados en mt01.md

--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -53,4 +53,5 @@ Una vez clonado, entra en el directorio del repositorio. Abre el archivo que des
 Antes de hacer un commit, puedes verificar los cambios realizados utilizando "git status". 
 Añade el archivo modificado al área de preparación para el commit "git add mt01.md"
 Realizar commit con un mensaje descriptivo sobre los cambios realizados "git commit -m "Cambios realizados en mt01.md"
+modificacions
           
