--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -18,7 +18,7 @@ En el repositorio del template se hace un fork del siguiente enlace https://gith
 
 El editor basado en web de github.dev se puede utilizar para editar archivos y confirmar los cambios de github. Además proporciona muchas de las ventajas de Visual Studio Code, como las búsquedas, el resaltado de la sintaxis y la vista del control de código fuente. También puedes utilizar la sincronización de la configuración para compartir tus propios valores de configuración de VS Code con el editor. La forma más fácil de acceder a él es desde el propio repositorio de GIthub, apretar la tecla ".". Viendo el siguiente tutorial se puede ver como utilizarlo, muy semejante a Visual Studio Code. 
 [Tutorial github.dev](https://www.youtube.com/watch?v=d7jHUh1PGwU)
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d7jHUh1PGwU" frameborder="0" allowfullscreen></iframe>
 
 ![image](../images/MT01/image_02.png)
 
