--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -42,21 +42,21 @@ Luego de realizar las modificaciones en Github.dev, se debe ir a la pestaña Con
 
 ### Paso a Paso realizado con GIT
 
-Abre la terminal o línea de comandos.
-Navega hasta la carpeta donde deseas clonar el repositorio utilizando el comando "cd".
-Se inicializa el repositorio con el comando "git init"
-Luego se clona el repositorio con el comando "git clone"
+Abrir la terminal o línea de comandos.<br>
+Navegar hasta la carpeta donde se desea clonar el repositorio utilizando el comando "cd".<br>
+Se inicializa el repositorio con el comando "git init"<br>
+Luego se clona el repositorio con el comando "git clone "url" "
 
 ![image](../images/MT01/image_06.png)
 
-Esto creará una copia local del repositorio en tu carpeta actual.
-Una vez clonado, entra en el directorio del repositorio. Abre el archivo que deseas modificar (mt01.md) en tu editor de texto o IDE preferido y realiza las modificaciones necesarias.
-Antes de hacer un commit, puedes verificar los cambios realizados utilizando "git status". 
-Añade el archivo modificado al área de preparación para el commit "git add mt01.md"
+Esto creará una copia local del repositorio en la carpeta actual.
+Una vez clonado, entrar en el directorio del repositorio. Abrir el archivo que se desea modificar (mt01.md) en un editor de texto o IDE preferido y realizar las modificaciones necesarias.<br>
+Antes de hacer un commit, se puede verificar los cambios realizados utilizando "git status". <br>
+Añadir el archivo modificado al área de preparación para el commit con "git add mt01.md"
 
 ![image](../images/MT01/image_07.png)
 
-Realizar commit con un mensaje descriptivo sobre los cambios realizados "git commit -m "Cambios realizados en mt01.md" "
+Realizar commit con un mensaje descriptivo sobre los cambios realizados "git commit -m "Cambios realizados en mt01.md" "<br>
 Enviar los cambios al repositorio, utiliza el comando "git push origin"
 
 ![image](../images/MT01/image_08.png)
