--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -60,3 +60,7 @@ Realizar commit con un mensaje descriptivo sobre los cambios realizados "git com
 Enviar los cambios al repositorio, utiliza el comando "git push origin"
 
 ![image](../images/MT01/image_08.png)
+
+### Conclusión
+
+Entender la herramienta como GitHub que puede integrarse para optimizar la gestión de proyectos. La creación de un repositorio, la edición y confirmación de cambios, la configuración de GitHub Pages para la publicación de contenido estático, y la personalización de documentación son pasos esenciales en el desarrollo de proyectos.
