--- a/docs/tecnicos/mt03.md
+++ b/docs/tecnicos/mt03.md
@@ -81,3 +81,5 @@ Se seleccionaron los tipos de corte laser, en este caso ROJO para corte y AZUL p
 ### Acceso a los archivo en drive
 
 [Carpeta]([Logo](https://drive.google.com/file/d/1RLfONKZYy3gfTo7AExZfMajiqSh2bcb4/view?usp=sharing))
+
+[Enlace para ver fabricación](https://le0nidas1.github.io/leonardo_eguia/fabricacion/fp01/)
