--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -69,3 +69,4 @@ A Continuación se deja el archivo .gcode
 
 [Codigo .gcode](https://drive.google.com/file/d/1isdNPrDAVVH1Spx-axMuFBUncByeAx5J/view?usp=sharing)
 
+[Enlace para ver su fabricación](https://le0nidas1.github.io/leonardo_eguia/fabricacion/fp02/)
