--- a/docs/diseno/md03.md
+++ b/docs/diseno/md03.md
@@ -9,8 +9,8 @@ hide:
 
 Para este módulo MD03, es evidente que la herramienta facilitó la visualización y organización de ideas clave en el desarrollo del proyecto. Miro permitió estructurar de manera clara los retos, funciones, recursos, y los próximos pasos a seguir. Este enfoque visual sino que también permitió identificar áreas de mejora y nuevas oportunidades para el prototipo. 
 
-![](../images/MD03/image_01.png
+![](../images/MD03/image_01.png)
 
-![](../images/MD03/image_02.png
+![](../images/MD03/image_02.png)
 
 URL: https://miro.com/app/board/uXjVKlm1tIk=/
