--- a/docs/tecnicos/mt06.md
+++ b/docs/tecnicos/mt06.md
@@ -77,4 +77,4 @@ Para ilustrar el funcionamiento del sistema, se incluirá un video de la demostr
 
 
 [VIdeo demostrativo](https://https://youtu.be/2I2lBsl9nMw)
-<iframe width="560" height="315" src="https://youtu.be/2I2lBsl9nMw" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2I2lBsl9nMw" frameborder="0" allowfullscreen></iframe>
