--- a/docs/tecnicos/mt06.md
+++ b/docs/tecnicos/mt06.md
@@ -76,5 +76,5 @@ En caso de recibir el mensaje "Cerrar", el servomotor se posiciona a 0°, comple
 Para ilustrar el funcionamiento del sistema, se incluirá un video de la demostración. 
 
 
-[VIdeo demostrativo](https://https://youtu.be/2I2lBsl9nMw)
+[VIdeo demostrativo](https://www.youtube.com/watch?v=2I2lBsl9nMw)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2I2lBsl9nMw" frameborder="0" allowfullscreen></iframe>
