--- a/docs/tecnicos/mt07.md
+++ b/docs/tecnicos/mt07.md
@@ -31,6 +31,8 @@ Además se muestra el estado de un botón. Hay un botón físico conectado al pi
 
 La comunicación con el servidor web se comunica con el ESP32 usando peticiones de HTTP para cambiar el valor del servo o pedir el estado del botón.
 
+![](../images/MT07/image_02.png)
+
 ![](../images/MT07/image_03.jpg)
 
 Además se dejo el video mostrando evidencia.
