--- a/docs/tecnicos/mt07.md
+++ b/docs/tecnicos/mt07.md
@@ -41,3 +41,21 @@ Además se dejo el video mostrando evidencia.
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_YkmqT6Rw3s" frameborder="0" allowfullscreen></iframe>
 
 [Codigo Arduino](https://drive.google.com/drive/folders/1oGDKPr6QTtUJzjKEyIwruaBU-AbOtQ0A?usp=sharing)
+
+### Comunicación ESP8266 con servidor web PHP
+
+Actualmente, se está trabajando en el proyecto, el cual se enfoca en el desarrollo de un aerogenerador destinado a cargar dispositivos de bajo consumo, como teléfonos móviles, tablets, y luces LED. Una parte clave del proyecto involucra el uso de una ESP8266 equipada con un sensor Hall, el cual se encarga de contar las revoluciones de las aspas del aerogenerador. Más adelante contará con un sensor de corriente para relacionar la carga de los dispositivos. En el eje de las aspas del aerogenerador, se han colocado dos imanes. Cada vez que estos imanes pasan por el sensor Hall, este detecta el campo magnético y cuenta una revolución. Así, el sistema puede medir la velocidad de rotación de las aspas en tiempo real.
+
+![](../images/MT07/image_04.jpg)
+
+Los datos recogidos por la ESP8266 se envían y publican en un servidor web. En este servidor, se almacena la información sobre las revoluciones por minuto (RPM), lo que permite llevar un registro de la actividad del aerogenerador.
+
+Además de almacenar los datos, el sistema web permite visualizar las revoluciones de las aspas en tiempo real a través de gráficas dinámicas. Esto facilita el análisis del rendimiento del aerogenerador y su eficiencia en la carga de los dispositivos de bajo consumo conectados.
+
+![](../images/MT07/image_05.png)
+
+[Codigo Arduino](https://drive.google.com/drive/folders/1BlEPAX70Q550lEFMMCovB2ulWwqn__f6?usp=sharing)
+
+
+[Codigo WEB](https://drive.google.com/drive/folders/1JlHcFHhdqHZiaqt4THTNckRCBd4f8-wF?usp=sharing)
+
