--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -42,10 +42,55 @@ Tras las primeras pruebas con el molde utilizando yeso para su relleno, los resu
 ![](../images/MT09/image_04.png)
 
 
-
 ### Archivos descargables
 
 A Continuación se deja los archivos para descargar
 
 [Archivo F3D](https://drive.google.com/drive/folders/1ib2ajf_Oh1cTbQ6Vc9KOY-QcjMgiFId8?usp=sharing)
+
+
+### Proceso de Pruebas
+
+Se imprimieron los moldes para la maceta en PLA. Los moldes fueron diseñados en dos partes, con guías de encastre para asegurar un correcto alineamiento.
+
+### Primera Prueba con Yeso
+
+El primer intento se utilizó el molde inicial, donde se vertió yeso en la parte inferior del molde.
+Luego, la parte superior del molde fue colocada a presión, permitiendo que el exceso de yeso saliera por los respiraderos.
+Se dejó secar el yeso durante un día completo, pero los resultados no fueron buenos, ya que el yeso no logró un secado uniforme, probablemente debido a problemas de ventilación y densidad del material.
+
+![](../images/MT09/image_05.jpg)
+
+![](../images/MT09/image_06.jpg)
+
+### Segunda Prueba con Nuevo Diseño del Molde
+
+Para la segunda versión del molde, se hicieron ajustes en la alimentación y el respiradero, moviendo ambos hacia la parte superior.
+Se vertió nuevamente yeso en este molde, pero el resultado fue el mismo: el yeso no logró secarse adecuadamente, lo que impidió obtener una pieza sólida.
+
+![](../images/MT09/image_07.jpg)
+
+![](../images/MT09/image_08.jpg)
+
+
+### Tercera Prueba con Gelatina
+
+En este intento, se utilizó gelatina como material de relleno, utilizando el molde con la alimentación por la parte superior.
+Los resultados fueron mejores en términos de consistencia y facilidad de desmoldeo, pero la pieza se partió por la mitad debido a la fragilidad de la gelatina.
+
+![](../images/MT09/image_09.jpg)
+
+![](../images/MT09/image_10.jpg)
+
+![](../images/MT09/image_11.jpg)
+
+
+### Proximas Pruebas
+
+Para futuros experimentos, se planea ajustar la proporción de agua en la mezcla de gelatina para mejorar su consistencia y resistencia, buscando un equilibrio adecuado entre flexibilidad y solidez.
+
+
+
+
+
 
