--- a/docs/diseno/md02.md
+++ b/docs/diseno/md02.md
@@ -20,6 +20,13 @@ Este primer paso sienta las bases para el desarrollo de intervenciones específi
 
 ![](../images/MD02/image_md02_1.png)
 
+### Segundo Paso. Estrategias de validación: Jam Session
+ 
+Una vez definido el problema y la propuesta de valor, lo siguiente consiste en realizar una Jam Session, que se identifican y priorizan acciones relacionadas con la validación del proyecto. En este ejercicio, se utiliza un diagrama con dos ejes: de lo más fácil a lo más difícil y de lo irrelevante a lo más relevante, para clasificar y priorizar las acciones necesarias como se ven en la imgágen.
+
+![](../images/MD02/image_md02_4.png)
+
+
 ### Segundo Paso. Estrategias de validación
 
 Una vez definido el problema y la propuesta de valor en el primer paso, el siguiente paso es desarrollar una estrategia de validación. Esta estrategia consiste en planificar cómo se verificará y demostrará la efectividad y viabilidad del proyecto de descentralización de energía con aerogeneradores.
